tests/baselines/reference/asyncGetter_es6.errors.txt
tests/cases/conformance/async/es6/asyncGetter_es6.ts(2,3): error TS1042: 'async' modifier cannot be used here.
tests/cases/conformance/async/es6/asyncGetter_es6.ts(2,13): error TS2378: A 'get' accessor must return a value.


==== tests/cases/conformance/async/es6/asyncGetter_es6.ts (2 errors) ====
    class C {
      async get foo() {
      ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
                ~~~
!!! error TS2378: A 'get' accessor must return a value.
      }
    }